增加对java命令的介绍